[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/objects/note_3d/note_3d.gd" type="Script" id=1]

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("note_preview:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.5, 0.2, 0.05 )

[node name="note_3d" type="Spatial"]
script = ExtResource( 1 )

[node name="preview_scaling_pivot" type="Spatial" parent="."]
transform = Transform( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )

[node name="moving_note" type="Spatial" parent="."]

[node name="note" type="CSGBox" parent="moving_note"]
width = 0.5
height = 0.2
depth = 0.05

[node name="tail" type="CSGBox" parent="moving_note"]
width = 0.15
height = 0.01
depth = 0.001

[node name="note_preview_2" type="CSGBox" parent="."]
transform = Transform( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
visible = false
width = 0.5
height = 0.2
depth = 0.05

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show_note_preview = SubResource( 2 )

[node name="PreviewTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="FreezeTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DestroyTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="note_preview" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 1 )
material/0 = null
[connection signal="timeout" from="PreviewTimer" to="." method="_on_PreviewTimer_timeout"]
[connection signal="timeout" from="FreezeTimer" to="." method="_on_FreezeTimer_timeout"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
